[package]
name = "astroport-pair-stable-owner"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport stableswap pair contract implementation specifically designed for allowing pool admin changes."
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cw2 = "0.13"
cw20 = "0.13"
cosmwasm-std = { version = "1.0" }
cw-storage-plus = "0.13.0"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
protobuf = { version = "2", features = ["with-bytes"] }
astroport-pair-stable = { path = "../pair_stable", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = "1.0"
proptest = "1.0.0"
sim = { git = "https://github.com/astroport-fi/astroport-sims.git", rev = "d617510737ee2c529d3aaa7afbdac5ccb5a385c9", package = "sim" }
astroport-token = {path = "../token"}
cw-multi-test = "0.13"
astroport-factory = {path = "../factory"}
