[package]
name = "astroport-supervault-adapter"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "Astroport proxy contract for SuperVaults, mimicking the behavior of pair contract"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport.workspace = true
cw2.workspace = true
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"] }
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
neutron-std = { git = "https://github.com/astroport-fi/neutron-std", branch = "backport/cosmwasm_v1" }
cw-utils.workspace = true
itertools.workspace = true
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
#anyhow = "1"
#derivative = "2.2"
#astroport-test = { path = "../../packages/astroport_test" }
#astroport-factory = { path = "../factory" }