[package]
name = "astroport-pair-transmuter"
version = "1.1.1"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport constant sum pair contract implementation. Handles no fee pools with constant 1:1 ratio."
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
astroport = { version = "5", path = "../../packages/astroport" }
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"]}
cw-storage-plus = "1.2.0"
cosmwasm-schema = "1.5.0"
thiserror.workspace = true
cw2.workspace = true
cw20 = "1.1"
cw-utils.workspace = true
itertools.workspace = true

[dev-dependencies]
anyhow = "1"
derivative = "2"
cw20-base = "1.1"
astroport-factory = { path = "../factory" }
astroport-native-coin-registry = { path = "../periphery/native_coin_registry", version = "1" }
astroport-test = { path = "../../packages/astroport_test/" }
