[package]
name = "astroport-pair-xyk-sale-tax"
version = "1.6.0"
authors = ["Astroport", "Sturdy"]
edition = "2021"
description = "The Astroport constant product pool contract implementation"
license = "Apache-2.0"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
integer-sqrt = "0.1"
astroport = { path = "../../packages/astroport", version = "3.9" }
cw2 = "0.15"
cw20 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-schema = "1.1"
cw-utils = "1.0.1"
astroport-pair = { path = "../pair", features = ["library"], version = "1.5" }

[dev-dependencies]
astroport-token = { path = "../token" }
astroport-factory = { path = "../factory" }
proptest = "1.0"
prost = "0.11.5"
astroport-mocks = { path = "../../packages/astroport_mocks" }
astroport-pair-1_3_3 = { package = "astroport-pair", version = "=1.3.3" }
test-case = "3.3.1"
