[package]
name = "astroport-pair-xyk-sale-tax"
version = "2.0.0"
authors = ["Astroport", "Sturdy"]
edition = "2021"
description = "The Astroport constant product pool contract implementation"
license = "Apache-2.0"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
injective = ["astroport/injective"]
sei = ["astroport/sei"]
library = []

[dependencies]
integer-sqrt = "0.1"
astroport = { path = "../../packages/astroport", version = "4" }
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std = { workspace = true, features = ["cosmwasm_1_1", "stargate"]}
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
cw-utils.workspace = true
astroport-pair = { path = "../pair", features = ["library"], version = "2" }

[dev-dependencies]
cw20-base = "1.1"
astroport-factory = { path = "../factory" }
astroport-incentives = { path = "../tokenomics/incentives"}
proptest = "1.0"
prost = "0.11.5"
astroport-test = { path = "../../packages/astroport_test/" }
astroport-pair-1_3_3 = { package = "astroport-pair", version = "=1.3.3" }
test-case = "3.3.1"
astroport-tokenfactory-tracker = { path = "../periphery/tokenfactory_tracker"}
