[package]
name = "astroport-router"
version = "1.2.1"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport router contract - provides multi-hop swap functionality for Astroport pools"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20 = "0.15"
cosmwasm-std.workspace = true
cw-storage-plus = "0.15"
integer-sqrt = "0.1"
astroport = "3.8"
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
astroport-factory = { path = "../factory" }
cw20-base = "1.1"
astroport-pair = { path = "../pair" }
astroport-test= { path = "../../packages/astroport_test" }
anyhow = "1.0"
