[package]
name = "astroport-router"
version = "2.0.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport router contract - provides multi-hop swap functionality for Astroport pools"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
library = []

[dependencies]
cw2.workspace = true
cw20 = "1.1"
cosmwasm-std.workspace = true
cw-storage-plus = "1.2"
astroport.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true

[dev-dependencies]
astroport-factory = { path = "../factory" }
cw20-base = "1.1"
astroport-pair = { path = "../pair" }
astroport-test = { path = "../../packages/astroport_test" }
anyhow = "1.0"
