[package]
name = "terraswap-pair-stable"
version = "1.2.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "A Terraswap pair contract"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]
cranelift = ["cosmwasm-vm/default-cranelift"]
singlepass = ["cosmwasm-vm/default-singlepass"]

[dependencies]
integer-sqrt = "0.1.5"
terraswap = { path = "../../packages/terraswap", default-features = false, version = "1.1.0"}
cw20 = { version = "0.2" }
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
uint = "0.8"

[dev-dependencies]
cosmwasm-vm = { version = "0.10.1", default-features = false }
cosmwasm-schema = "0.10.1"
terra-cosmwasm = { version = "1.2.2" }
proptest = "0.10"
sim =  { path = "./sim" }
