[package]
name = "terraswap-token"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Expanded implementation of a CosmWasm-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
terraswap = { path = "../../packages/terraswap", default-features = false, version = "2.1.0"}
cw2 = "0.7"
cw20 = "0.7"
cw20-base = { version = "0.7", features = ["library"] }
cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "0.10.1", default-features = false }
cosmwasm-schema = { version = "0.15.0" }
