[package]
name = "astroport-token"
version = "1.0.0-fix-name"
authors = ["Astroport"]
edition = "2018"
description = "Expanded implementation of a CosmWasm-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cw2 = "0.15"
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = "1.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = "0.6"

[dev-dependencies]
# we only need to enable this if we use integration tests
#cosmwasm-vm = { version = "1.1", default-features = false }
cosmwasm-schema = "1.1"
