[package]
name = "astroport-token"
version = "1.1.1"
authors = ["Astroport"]
edition = "2021"
description = "Expanded implementation of a CosmWasm-20 compliant token for the Astroport ASTRO token"
license = "MIT"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
astroport = { workspace = true }
cw2 = "0.15"
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = { version = "1.1" }
snafu = { version = "0.6" }
cosmwasm-schema = { version = "1.1" }
