[package]
name = "astroport-whitelist"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
cw1-whitelist = { version = "0.15", features = ["library"] }
cw2 = "0.15"
cosmwasm-std = "1.1"
thiserror = { version = "1.0" }
cosmwasm-schema = { version = "1.1" }
