[package]
name = "astroport-whitelist"
version = "1.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2018"
description = "Implementation of an proxy contract using a whitelist"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
cw0 = "0.10.3"
cw1 = "0.15"
cw2 = "0.15"
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
astroport = { path = "../../packages/astroport", default-features = false }
classic-bindings = { version = "0.1.1" }

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
cosmwasm-schema = "1.1"
derivative = "2"
classic-test-tube = {version = "0.1.0", git = "https://github.com/classic-terra/classic-rust.git", package = "classic-test-tube", rev = "2b3571f272b54acd2119a33706f4abccdaa9f5dd"}
