[package]
name = "astroport-whitelist"
version = "2.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>", "Astroport"]
edition = "2021"
description = "Implementation of proxy contract using a whitelist. Supports general IBC and Neutron IbcTransfer messages"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw1-whitelist = { version = "1.1", features = ["library"] }
cw2 = "1"
cosmwasm-std = { version = "1.5", features = ["stargate"] }
neutron-sdk = "0.8.0"
thiserror = "1"
cosmwasm-schema = "1.5"
