[package]
name = "astroport-pair-bonded-template"
version = "0.0.0"
authors = ["Astroport"]
edition = "2021"
description = "The Astroport pair-bonded template."
license = "GPL-3.0-only"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
astroport = { path = "../../packages/astroport", default-features = false }
ap-pair-bonded = { path = "../../packages/pair_bonded" }
ap-pair-astro-xastro = { path = "../../packages/pair_astro_xastro" }
cosmwasm-std = { version = "1.1" }
cw-storage-plus = "0.15"
cosmwasm-schema = { version = "1.1" }
