[package]
name = "astro-token-converter-neutron"
version = "1.0.0"
authors = ["Astroport"]
edition = "2021"
description = "ASTRO.cw20 to tokenfactory ASTRO converter on Neutron chain"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
neutron-sdk = "0.8.0"
astroport = "4"
astro-token-converter = { path = "../astro_converter", version = "1.0", features = ["library"] }
cosmwasm-std = "1.5"
cw2 = "1.1"
cw-utils = "1"
