[package]
name = "astroport-fee-granter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
astroport = { path = "../../../packages/astroport", version = "3" }
cosmos-sdk-proto = { version = "0.19.0", default-features = false }
cosmwasm-std = { version = "1.1", features = ["stargate"] }
cw-storage-plus = "0.15"
cw-utils = "1.0"
cosmwasm-schema = "1.2.5"
thiserror = "1"
cw2 = "1.0.1"

[dev-dependencies]
cw-multi-test = "1.0.0"
