[package]
name = "astroport-fee-granter"
version = "0.1.0"
edition = "2021"
description = "Astroport contract responsable for setting up fee grants"
license = "GPL-3.0-only"
repository = "https://github.com/astroport-fi/astroport"
homepage = "https://astroport.fi"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
astroport = "3"
cosmos-sdk-proto = { version = "0.19.0", default-features = false }
cosmwasm-std = { workspace = true, features = ["stargate"] }
cw-storage-plus = "0.15"
cw-utils.workspace = true
cosmwasm-schema.workspace = true
thiserror.workspace = true
cw2.workspace = true

[dev-dependencies]
cw-multi-test = "1.0.0"
